--- a/Layouts/Game Layout.uistate.xml
+++ b/Layouts/Game Layout.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>185.32</position-x>
-        <position-y>564.791</position-y>
+        <position-y>605.145</position-y>
         <position-z>161.415</position-z>
         <lookat-x>185.32</lookat-x>
-        <lookat-y>564.791</lookat-y>
+        <lookat-y>605.145</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -22,7 +22,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="HUD" />
+    <active-layer name="Game" />
     <layers>
         <layer locked="0" name="Background" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Parallax" parallax-in-editor="0" visible="1" />
